<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="power_settings_title">Power management</string>
    <string name="brightness_summary_white_magic">Powered by WhiteMagic™</string>
    <string name="automatic_brightness_bright_mode">Bright mode</string>
    <string name="automatic_brightness_powersave_mode">Power save mode</string>
    <string name="entry_font_size_small">Small</string>
    <string name="entry_font_size_normal">Normal</string>
    <string name="entry_font_size_large">Large</string>
    <string name="entry_font_size_extra_large">Extra large</string>
    <string name="usb_storage">External USB storage</string>
    <string name="usb_storage_eject">Unmount USB storage</string>
    <string name="usb_storage_eject_summary">Unmount USB storage so you can safely remove it</string>
    <string name="usb_storage_mount">Mount USB storage</string>
    <string name="usb_storage_mount_summary">Mount the USB storage</string>
    <string name="usb_storage_insert_summary">Connect a USB storage for mounting</string>
    <string name="usb_storage_format">Erase USB Storage</string>
    <string name="usb_storage_format_summary">"Erase all data on the device's USB storage, such as music and photos."</string>
    <string name="usb_storage_unavailable">Unavailable</string>
    <string name="usb_storage_format_title">Erase USB storage</string>
    <string name="usb_storage_format_desc">This action will erase the USB storage. You will lose <b>all</b> data saved there!</string>
    <string name="usb_storage_format_button_text">Erase</string>
    <string name="usb_storage_format_final_desc">Erase USB storage, deleting all files saved there? Action cannot be reversed!</string>
    <string name="usb_storage_format_final_button_text">Delete everything</string>
    <string name="usb_storage_dlg_confirm_unmount_title">Unmount USB storage</string>
    <string name="usb_storage_dlg_confirm_unmount_text">If you unmount the USB storage, some applications you are using will stop and may be unavailable until you remount it.</string>
    <string name="usb_storage_dlg_error_unmount_title">Could not unmount</string>
    <string name="usb_storage_dlg_error_unmount_text">Could not unmount USB storage. Try again later.</string>
    <string name="usb_storage_unmount_inform_text">USB storage will be unmounted.</string>
    <string name="phone_memory">Device memory</string>
    <string name="erase_emmc_storage">Clear internal storage</string>
    <string name="erase_emmc_storage_desc">"Clear all data on device's internal storage, such as music and photos."</string>
    <string name="emmc_memory">Internal storage</string>
    <string name="emmc_format">Clear internal storage</string>
    <string name="emmc_format_desc">"Format (clear) device's internal storage"</string>
    <string name="emmc_mount">Mount internal storage</string>
    <string name="emmc_mount_summary">Mount the internal storage</string>
    <string name="emmc_erase">Clear internal storage</string>
    <string name="emmc_erase_description">This action will clear internal storage. You will lose all data on it.</string>
    <string name="emmc_erase_button">Clear internal storage</string>
    <string name="emmc_erase_everything_desc">Clear all files saved in it? Action cannot be reversed!</string>
    <string name="settings_password_restrict_simple_txt">Password too simple</string>
    <string name="settings_pin_restrict_simple_txt">PIN too simple</string>
    <string name="usb_format_gesture_explanation">You must draw your unlock pattern to confirm that you want to erase the connected external USB storage.</string>
    <string name="emmc_format_gesture_explanation">You must draw your unlock pattern to confirm that you want to erase the internal storage</string>
    <string name="lockpattern_activated">Unlock pattern activated!</string>
    <string name="lockscreen_strings_backup_question_answer_header_txt">Write answer</string>
    <string name="lockscreen_strings_backup_question_answer_hint_txt">Answer</string>
    <string name="lockscreen_strings_backup_question_security_question_prompt_info_txt">You need to select a security question as a backup solution, in case you forget the pattern.</string>
    <string name="lockscreen_strings_backup_question_security_question_prompt_title_txt">Security question</string>
    <string name="lockscreen_strings_backup_question_selector_title_txt">Select a question</string>
    <string name="lockscreen_strings_backup_question_answer_info_txt">Think of storing the answer in a safe place in case you forget it.</string>
    <string name="gui_ok_txt">OK</string>
    <string name="sim_strings_pin_attempts_remaining_txt">Attempts remaining:</string>
    <string name="error_name_conflict">Name conflict with locked Access point name (APN). Please change.</string>
    <string name="config_defaultLocale" />
    <string name="config_tetherDunApn" />
    <string name="location_warning_message">Data transmission charges may apply.</string>
    <string name="agree_label">Agree</string>
    <string name="disagree_label">Disagree</string>
    <string name="dual_tether_apn_dialog_title">Select an APN</string>
    <string name="dual_tether_apn_enterprise">Orange Internet Enterpr.</string>
    <string name="dual_tether_apn_consumer">Orange Internet</string>
    <string name="certificates_title">Certificates</string>
    <string name="settings_certificates_activity_title">Certificates</string>
    <string name="settings_certificates_activity_loading">Loading</string>
    <string name="tethering_confirmation_checkbox">"Don't show this again"</string>
    <string name="data_traffic_cost_warning_dialog_message">Allow mobile data? Additional charges may apply depending on your network subscription. To avoid additional charges, disable mobile data when finished.</string>
    <string name="locale_picker_done_label">Done</string>
    <string name="wifi_wapi_as_cert">AS Certificate</string>
    <string name="wifi_wapi_user_cert">User Certificate</string>
    <string name="install_wapi_certs">Install WAPI certificates</string>
    <string name="summary_install_wapi_certs">Install certificates from internal storage</string>
    <string name="wifi_security_short_wapi_psk">WAPI PSK</string>
    <string name="wifi_security_short_wapi_cert">WAPI CERT</string>
    <string name="wifi_security_wapi_psk">WAPI PSK</string>
    <string name="wifi_security_wapi_cert">WAPI CERT</string>
    <string name="reset_phone_menu_title">Reset device</string>
    <string name="reset_phone_activity_title">Reset device</string>
    <string name="wifi_reconnect">Reconnect</string>
    <string name="wifi_connected_limited">Limited connectivity</string>
    <string name="wifi_connected_limited_with_ssid">Connected to %1$s with limited connectivity</string>
    <string name="tethering_warning_txt">Any ongoing operations such as media transfer, device software update, backup and restore will be interrupted.</string>
    <string name="setupguide_settings_title">Setup guide</string>
    <string name="secure_elements_settings_title">NFC security handler</string>
    <string name="secure_elements_disabled_summary">Unavailable because NFC is turned off</string>
    <string name="secure_elements_on_sim_summary">SIM card</string>
    <string name="secure_elements_in_phone_summary">Phone</string>
    <string name="secure_elements_none_summary">None</string>
    <string name="secure_elements_error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create">Create</string>
    <string name="device_info_default">Unknown</string>
    <string name="header_category_wireless_networks">WIRELESS &amp; NETWORKS</string>
    <string name="header_category_device">DEVICE</string>
    <string name="header_category_personal">PERSONAL</string>
    <string name="header_category_system">SYSTEM</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="sms_over_ims_on">Turn on SMS over IMS</string>
    <string name="sms_over_ims_off">Turn off SMS over IMS</string>
    <string name="ims_reg_required_on">Turn on IMS registration required</string>
    <string name="ims_reg_required_off">Turn off IMS registration required</string>
    <string name="lte_ram_dump_on">Turn on lte ram dump</string>
    <string name="lte_ram_dump_off">Turn off lte ram dump</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount internal storage</string>
    <string name="sdcard_format">Erase internal storage</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="automatic_brightness">Adapt to lighting conditions</string>
    <string name="lockpattern_confirm_button_text">Confirm</string>
    <string name="skip_button_label">Cancel</string>
    <string name="clear_phase_strings_clear_phase_desc_txt">Automatically adjust the sound quality of the internal speaker</string>
    <string name="display_category_personalisation_title">Personalization</string>
    <string name="swiqi_strings_swiqi_desc_txt">Image quality enhancer for photos and videos</string>
    <string name="swiqi_strings_swiqi_txt">Mobile BRAVIA Engine</string>
    <string name="theme_dialog_title_select_theme_txt">Select theme</string>
    <string name="theme_label">Theme</string>
    <string name="theme_summary">Change theme and wallpaper</string>
    <string name="xloud_strings_xloud_desc_txt">Enhance the loudness of speaker</string>
    <string name="glove_mode_checkbox_title">Glove mode</string>
    <string name="glove_mode_checkbox_summary">Enable glove mode by unlocking the device while wearing gloves</string>
    <string name="xloud_strings_xloud_txt">xLOUD™</string>
    <string name="swiqi_strings_swiqi2_txt">Mobile BRAVIA Engine 2</string>
    <string name="clear_phase_strings_clear_phase_txt">Clear Phase™</string>
</resources>