<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView android:id="@android:id/icon" android:paddingTop="20.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@null" />
        <CheckBox android:textAppearance="?android:textAppearanceSmall" android:id="@id/automatic_mode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="20.0dip" android:text="@string/automatic_brightness" />
        <SeekBar android:id="@android:id/seekbar" android:paddingLeft="20.0dip" android:paddingTop="33.0dip" android:paddingRight="20.0dip" android:paddingBottom="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="horizontal" android:id="@id/automatic_mode_options" android:paddingLeft="20.0dip" android:paddingTop="13.0dip" android:paddingRight="20.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:layout_gravity="left" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent">
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorPrimary" android:gravity="center_vertical" android:id="@id/bright_mode_text" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/automatic_brightness_bright_mode" android:layout_weight="1.0" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorPrimary" android:gravity="center_vertical" android:id="@id/powersave_mode_text" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/automatic_brightness_powersave_mode" android:layout_weight="1.0" />
            </LinearLayout>
            <RadioGroup android:gravity="right" android:orientation="vertical" android:id="@id/automatic_radio_group" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <RadioButton android:id="@id/bright_mode" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@id/powersave_mode" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
